--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ BR
 輸
 出
 </pre>
+<del>
+  <p>“I apologize for the delay.”</p>
+</del>
+<ins cite="../在此導入連結" datetime="2020/01/24">
+  <p>“A wizard is never late …”</p>
+</ins>
 </body>
 
 </html>
