--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<meta name=“keywords” content="ian的回家作業">
 </head>
 
 <body>
@@ -20,7 +21,7 @@ BR
 <del>
   <p>“I apologize for the delay.”</p>
 </del>
-<ins cite="../在此導入連結" datetime="2020/01/24">
+<ins cite="../在此導入連結" datetime="20200124">
   <p>“A wizard is never late …”</p>
 </ins>
 </body>
