--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-<meta name=“description” content="ian的回家作業">
+<meta charset="utf-8">
+<meta name=“description” content="ian的回家作業,ian">
 </head>
 
 <body>
