--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<meta name="description" content="123456iann">
+<meta name="description" content="iannn">
+<title>Github Pages ian</title>
 </head>
 
 <body>
